--- a/css/hlstyle.css
+++ b/css/hlstyle.css
@@ -52,3 +52,11 @@ header nav{
     padding: 2px 0;
     border: 1px solid #ced4da;
 }
+.slick-current{
+    background: #f58220 !important;
+    top: -40px !important;
+
+}
+.slick-current .title{
+    color: #fff !important;
+}
