--- a/css/main.css
+++ b/css/main.css
@@ -715,10 +715,10 @@ section.list-channel {
 .bill-content{
     overflow: auto;
     height: 100%;
+    background: #fff;
 }
 .my-bill table {
     font-family: 'Roboto', sans-serif;
-    color: #fff;
 }
 
 .my-bill .main-sidebar {
