--- a/css/main.css
+++ b/css/main.css
@@ -1335,3 +1335,21 @@ section.list-channel {
     max-width: 40px;
     max-height: 40px;
 }
+#videopopup{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    display: none;
+}
+#videoplayer{
+    width: 100%;
+    height: 100%;
+}
+#btnSkip{
+    position: absolute;
+    bottom: 100px;
+    right: 100px;
+    display: none;
+}
