--- a/css/hlstyle.css
+++ b/css/hlstyle.css
@@ -66,7 +66,7 @@ header nav{
     border: #F58220 solid 4px;
 }
 .groupchannelselect{
-    background: #05577a !important;
+    background: #f58220 !important;
 }
 .settingroom.selected{
     background: #f58220 !important;
