--- a/css/hlstyle.css
+++ b/css/hlstyle.css
@@ -105,3 +105,9 @@ header nav{
 .regioncurrent{
     border: #f58220 solid 2px;
 }
+.popup-frame{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
