--- a/css/hlstyle.css
+++ b/css/hlstyle.css
@@ -106,8 +106,10 @@ header nav{
     border: #f58220 solid 2px;
 }
 .popup-frame{
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     height: 100%;
+    z-index: 10;
+    border: none;
 }
